简单聊天室例子

--- a/todo.txt
+++ b/todo.txt
@@ -25,3 +25,13 @@
   data: 0, // 翻开索引
 }
 
+
+
+我想使用nodejs的express-ws库搭建一个多人在线聊天的功能，需要实现的功能要点有
+1. 存在用户进入不同房间的概念，不同房间的消息和历史记录不共享
+2. 用户进入房间里会先得到房间的历史记录信息
+3. 用户在房间里可以进行发言，发言会传递到通房间里的其他用户，并会记录这个信息
+4. 房间里不存在用户后，5分钟内会清除该房间信息，释放缓存
+
+客户端是微信小程序或者h5，务必要考虑这一点
+请为我编写这样一份功能代码
